--- a/first.html
+++ b/first.html
@@ -2,8 +2,9 @@
     <head>
     </head>
     <body>
-    
-       <h1>HTML::Hjyper Text Markup Language</h1>
-       
+     <h1>HTML::Hjyper Text Markup Language</h1>
+     <hr>
+        <p>HTML is a language used to create web pages.
+            We can create user-interactive pages using HTML.
     </body>
 </html>
