--- a/first.html
+++ b/first.html
@@ -2,7 +2,7 @@
     <head>
     </head>
     <body>
-     <h1>HTML::Hjyper Text Markup Language</h1>
+     <h1 align="centre">HTML::Hyper Text Markup Language</h1>
      <hr>
         <p>HTML is a language used to create web pages.
             We can create user-interactive pages using HTML.
