--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<p>hello sirisha</p>
-<p>cse</p>
-<p>2ndyear</p>
-<b>kluniversity</b>
-<p>vaddeswaram</p>
+<html>
+    <head>
+    </head>
+    <body>
+     <h1 align="centre">HTML::Hyper Text Markup Language</h1>
+     <hr>
+        <p><b>HTML</b> is a <u>markuplanguage</u> used to create web pages.
+            We can create <i>user-interactive</i> pages using HTML.
+    </body>
+</html>
