--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
     </head>
     <body>
-     <h1 align="centre">HTML::Hyper Text Markup Language</h1>
+     <h1 align="center">HTML::Hyper Text Markup Language</h1>
      <hr>
         <p><b>HTML</b> is a <u>markuplanguage</u> used to create web pages.
             We can create <i>user-interactive</i> pages using HTML.
