--- a/index.html
+++ b/index.html
@@ -1,10 +1,57 @@
 <html>
-    <head>
-    </head>
-    <body>
-     <h1 align="center">HTML::Hyper Text Markup Language</h1>
-     <hr>
-        <p><b>HTML</b> is a <u>markuplanguage</u> used to create web pages.
-            We can create <i>user-interactive</i> pages using HTML.
-    </body>
+   <head>
+   </head>
+   <body>
+     <h1 align="center"><u><b>RESUME</b></u></h1>
+     <p>M.Bhavani Sirisha</p>
+     <p>Navabharathnagar</p>
+     <p>1/2,Guntur</p>
+     <p>Andhra Pradesh-522006</p>
+     <p>contact no:8074424874</p>
+     <p>Email Id:<i>siricoolent27@gmail.com</i> </p>
+     <p>Career Objective:</p>
+     <p>My main objective is to develope lot more skills to complete projects and</p> 
+     <p>to have an environment more adaptive and skillfull to make my goals fullfill.</p>
+     <p>Educational Qualification:</p>
+  <table border>
+    <tr>
+      <th>Qualification</th>
+      <th>Institution</th>
+      <th>Year of study</th>
+      <th>Grade</th>
+</tr>
+<tr>
+     <td>B.tech</td>
+     <td>Kluniversity</td>
+     <td>2015-2019</td>
+     <td>9.0</td>
+</tr>
+<tr>
+     <td>Intermediate</td>
+     <td>Narayana junior college</td>
+     <td>2013-2015</td>
+     <td>9.6</td>
+</tr>
+<tr>
+     <td>ssc</td>
+     <td>Oxford public school</td>
+     <td>2012-2013</td>
+     <td>9.7</td>
+</tr>
+</table>
+<p>Area of Interest:</p>
+     <p>Web Designing,coding in c,Reasoning</p>
+<p>Technical languages:</p>
+       <ul>
+         <li>c</li>
+         <li>oops</li>
+         <li>c++</li>
+         <li>HTML</li>
+</ul>
+     
+<p>Experince:</p>
+     <p>Internship at MICROSOFT,HP</p>
+<p>Workshops attended:</p>
+      <p>SEA,swecha camp</p>
+</body>
 </html>
