--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
      <p>Navabharathnagar</p>
      <p>1/2,Guntur</p>
      <p>Andhra Pradesh-522006</p>
-     <p>contact no:8074424874</p>
-     <p>Email Id:<i>siricoolent27@gmail.com</i> </p>
-     <p>Career Objective:</p>
-     <p>My main objective is to develope lot more skills to complete projects and</p> 
-     <p>to have an environment more adaptive and skillfull to make my goals fullfill.</p>
-     <p>Educational Qualification:</p>
-  <table border>
-    <tr>
-      <th>Qualification</th>
-      <th>Institution</th>
-      <th>Year of study</th>
-      <th>Grade</th>
+  <p><b>contact no</b>:8074424874</p>
+  <p><b>Email Id:</b><i>siricoolent27@gmail.com</i> </p>
+  <p><b>Career Objective:</b></p>
+            <p>My main objective is to develope lot more skills to complete projects and</p> 
+            <p>to have an environment more adaptive and skillfull to make my goals fullfill.</p>
+  <p><b>Educational Qualification:</b></p>
+     <table border>
+     <tr>
+       <th><b>Qualification</b></th>
+       <th><b>Institution</b></th>
+       <th><b>Year of study</b></th>
+       <th><b>Grade</b></th>
 </tr>
 <tr>
      <td>B.tech</td>
@@ -39,19 +39,18 @@
      <td>9.7</td>
 </tr>
 </table>
-<p>Area of Interest:</p>
+<p><b>Area of Interest:</b></p>
      <p>Web Designing,coding in c,Reasoning</p>
-<p>Technical languages:</p>
+<p><b>Technical languages:</b></p>
        <ul>
          <li>c</li>
          <li>oops</li>
          <li>c++</li>
          <li>HTML</li>
 </ul>
-     
-<p>Experince:</p>
+<p><b>Experince:</b></p>
      <p>Internship at MICROSOFT,HP</p>
-<p>Workshops attended:</p>
+<p><b>Workshops attended:</b></p>
       <p>SEA,swecha camp</p>
 </body>
 </html>
