--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <p>1/2,Guntur</p>
      <p>Andhra Pradesh-522006</p>
   <p><b>contact no</b>: 8074424874</p>
-  <p><b>Email Id:</b><i> siricoolent27@gmail.com</i> </p>
+      <p><b>Email Id:</b><i><u> siricoolent27@gmail.com</u></i> </p>
   <p><b>Career Objective:</b></p>
                     <p>My main objective is to develope lot more skills to complete projects and</p> 
                     <p>to have an environment more adaptive and skillfull to make my goals fullfill.</p>
