--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    </head>
    <body>
      <h1 align="center"><u><b>RESUME</b></u></h1>
-     <p align="right">Photo</p>
+      <p align="right"><u><b>Photo</b></u></p>
      <p>M.Bhavani Sirisha</p>
      <p>Navabharathnagar</p>
      <p>1/2,Guntur</p>
