--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       <p align="right"><u><b>Photo</b></u></p>
      <p>M.Bhavani Sirisha</p>
      <p>Navabharathnagar</p>
-     <p>1/2,Guntur</p>
+     <p>1/2,D.no:12/e</p>
+     <p>Guntur</p>
      <p>Andhra Pradesh-522006</p>
   <p><b>contact no</b>: 8187362596</p>
       <p><b>Email Id:</b><i><u> siricoolent27@gmail.com</u></i> </p>
