--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <p>Guntur</p>
      <p>Andhra Pradesh-522006</p>
   <p><b>contact no</b>: 8187362596</p>
-      <p style="color:blue;"><b>Email Id:</b><i><u> siricoolent27@gmail.com</u></i> </p>
+      <p><b>Email Id:</b></p><p style="color:blue;"><i><u> siricoolent27@gmail.com</u></i> </p>
   <p><b>Career Objective:</b></p>
                     <p>My main objective is to develope lot more skills to complete projects and</p> 
                     <p>to have an environment more adaptive and skillfull to make my goals fullfill.</p>
