--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
       <title>MyResume</title>
    </head>
    <body>
+      <div>
+         backgroundcolor-color : lightblue;
      <h1 align="center"><u><b>RESUME</b></u></h1>
       <p align="right"><u><b>Photo</b></u></p>
      <p>M.Bhavani Sirisha</p>
@@ -11,7 +13,7 @@
      <p>Guntur</p>
      <p>Andhra Pradesh-522006</p>
   <p><b>contact no</b>: 8187362596</p>
-      <p><b>Email Id:</b></p> <p style="color:blue;"><i><u> siricoolent27@gmail.com</u></i> </p>
+      <p><b>Email Id:</b><i><u> siricoolent27@gmail.com</u></i> </p>
   <p><b>Career Objective:</b></p>
                     <p>My main objective is to develope lot more skills to complete projects and</p> 
                     <p>to have an environment more adaptive and skillfull to make my goals fullfill.</p>
@@ -55,5 +57,6 @@
            <p>Internship at MICROSOFT,HP</p>
 <p><b>Workshops attended:</b></p>
            <p>SEA,swecha camp</p>
+      </div>
 </body>
 </html>
