--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
    <head>
+      <style>
+        div {
+         background-color : lightblue;
+         }
+      </style>
       <title>MyResume</title>
    </head>
    <body>
-      <div>
-         backgroundcolor-color : lightblue;
      <h1 align="center"><u><b>RESUME</b></u></h1>
       <p align="right"><u><b>Photo</b></u></p>
      <p>M.Bhavani Sirisha</p>
@@ -57,6 +60,6 @@
            <p>Internship at MICROSOFT,HP</p>
 <p><b>Workshops attended:</b></p>
            <p>SEA,swecha camp</p>
-      </div>
+ 
 </body>
 </html>
