--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <title>MyResume</title>
    </head>
    <body>
+      <div>
      <h1 align="center"><u><b>RESUME</b></u></h1>
       <p align="right"><u><b>Photo</b></u></p>
      <p>M.Bhavani Sirisha</p>
@@ -60,6 +61,6 @@
            <p>Internship at MICROSOFT,HP</p>
 <p><b>Workshops attended:</b></p>
            <p>SEA,swecha camp</p>
- 
+      </div>
 </body>
 </html>
